--- a/project.config.json
+++ b/project.config.json
@@ -8,8 +8,8 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"appid": "wxe70985c902c4ae34",
-	"projectname": "book",
+	"appid": "wx80da7caf253c5968",
+	"projectname": "dd",
 	"miniprogramRoot": "./dist",
 	"condition": {}
 }
