--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book",
+  "name": "dd",
   "version": "0.0.2",
   "description": "A WePY project",
   "main": "dist/app.js",
@@ -17,10 +17,6 @@
   "author": "ZZZRTIAN <616460647@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
-    "redux-promise": "^0.5.3",
-    "wepy-redux": "^1.5.3",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2"
@@ -39,9 +35,8 @@
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10",
     "wepy-eslint": "^1.5.3",
-    "wepy-plugin-uglifyjs": "^1.3.7"
+    "wepy-compiler-babel": "^1.5.1",
+    "wepy-compiler-less": "^1.3.10"
   }
 }
